--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SimplonWars - Star Wars Intro</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <!-- 🎵 AUDIO STAR WARS - AUTOPLAY -->
     <audio id="starWarsAudio" preload="auto" loop>
-      <source src="assets/sound/Star_Wars_Main_Theme_Song.mp3" type="audio/mpeg">
+      <source src="./assets/sound/Star_Wars_Main_Theme_Song.mp3" type="audio/mpeg">
       Votre navigateur ne supporte pas l'élément audio.
     </audio>
 
@@ -28,7 +28,7 @@
       </p>
 
       <h2 class="main-logo">
-        <img src="assets/images/SimponWars.png" alt="SimplonWars Logo">
+        <img src="./assets/images/SimponWars.png" alt="SimplonWars Logo">
       </h2>
 
       <div class="main-content">
